# mcp-tool-shadowing-demo

./: LICENSE  Makefile  README.md  angel_server.py  devil_server.py  provision_windsurf.py  pyproject.toml
