[project]
name = "mcp-tool-shadowing"
version = "0.1.0"
description = "Semgrep MCP tool shadowing demo"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[project.scripts]
angel-server = "angel_server:main"
devil-server = "devil_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
